--- a/package.json
+++ b/package.json
@@ -27,15 +27,30 @@
   },
   "homepage": "https://github.com/honey-protocol/api_v1#readme",
   "devDependencies": {
-    "@types/express": "^4.17.17",
-    "@types/node": "^18.14.2",
     "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.17",
+    "@types/node": "^18.14.6",
     "dotenv": "^16.0.3",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.5"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "@dialectlabs/blockchain-sdk-solana": "^1.0.1",
+    "@dialectlabs/sdk": "^1.5.2",
+    "@honey-finance/sdk": "1.0.137",
+    "@jup-ag/core": "^4.0.0-beta.14",
+    "@project-serum/anchor": "^0.26.0",
+    "@saberhq/token-utils": "^1.14.11",
+    "@solana/web3.js": "^1.73.3",
+    "@switchboard-xyz/switchboard-v2": "^0.0.174",
+    "@types/node-cron": "^3.0.7",
+    "bn.js": "^5.2.1",
+    "concurrently": "^7.6.0",
+    "express": "^4.18.2",
+    "jsbi": "^4.3.0",
+    "mongodb": "^5.1.0",
+    "node-cron": "^3.0.2",
+    "react": "^18.2.0"
   }
 }
