--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "set NODE_ENV=dev && ts-node-dev --respawn src/index.ts",
-    "build": "tsc"
+    "build": "tsc",
+    "test": "jest --watch"
   },
   "repository": {
     "type": "git",
@@ -27,10 +28,15 @@
   },
   "homepage": "https://github.com/honey-protocol/api_v1#readme",
   "devDependencies": {
+    "@jest/globals": "^29.5.0",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
     "@types/node": "^18.14.6",
+    "@types/supertest": "^2.0.12",
     "dotenv": "^16.0.3",
+    "jest": "^29.5.0",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.5"
