--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "express": "^4.18.2",
     "jsbi": "^4.3.0",
     "mongodb": "^5.1.0",
+    "mongoose": "^7.0.2",
     "node-cron": "^3.0.2",
     "react": "^18.2.0"
   }
