--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "API for the Honey Finance protocol",
   "main": "index.js",
   "scripts": {
-    "dev": "set NODE_ENV=dev && ts-node-dev --respawn src/index.ts",
+    "dev": "set NODE_ENV=dev && ts-node-dev --respawn src/index.ts --watch",
     "build": "tsc",
     "test": "jest --watch"
   },
@@ -53,11 +53,19 @@
     "@types/node-cron": "^3.0.7",
     "bn.js": "^5.2.1",
     "concurrently": "^7.6.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^6.7.0",
+    "global": "^4.4.0",
+    "helmet": "^6.0.1",
+    "hpp": "^0.2.3",
     "jsbi": "^4.3.0",
     "mongodb": "^5.1.0",
     "mongoose": "^7.0.2",
     "node-cron": "^3.0.2",
-    "react": "^18.2.0"
+    "pm2": "^5.3.0",
+    "react": "^18.2.0",
+    "xss-clean": "^0.1.1"
   }
 }
