--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "set NODE_ENV=dev && ts-node-dev --respawn src/index.ts --watch",
+    "devRun": "set NODE_ENV=dev && ts-node src/index.ts --watch",
     "build": "tsc",
     "test": "jest --watch"
   },
@@ -44,10 +45,14 @@
   "dependencies": {
     "@dialectlabs/blockchain-sdk-solana": "^1.0.0",
     "@dialectlabs/sdk": "^1.3.0",
-    "@honey-finance/sdk": "^1.1.128",
+    "@honey-finance/sdk": "^1.1.135",
     "@jup-ag/core": "^4.0.0-beta.14",
+    "@metaplex-foundation/js": "^0.18.3",
+    "@msgpack/msgpack": "^3.0.0-beta2",
     "@project-serum/anchor": "^0.26.0",
     "@saberhq/token-utils": "^1.14.11",
+    "@solana/buffer-layout": "^4.0.1",
+    "@solana/spl-token": "^0.3.7",
     "@solana/web3.js": "^1.73.3",
     "@switchboard-xyz/switchboard-v2": "^0.0.174",
     "@types/node-cron": "^3.0.7",
