--- a/package.json
+++ b/package.json
@@ -44,10 +44,11 @@
   "dependencies": {
     "@dialectlabs/blockchain-sdk-solana": "^1.0.0",
     "@dialectlabs/sdk": "^1.3.0",
-    "@honey-finance/sdk": "1.0.137",
+    "@honey-finance/sdk": "1.1.122",
     "@jup-ag/core": "^4.0.0-beta.14",
     "@project-serum/anchor": "^0.26.0",
     "@saberhq/token-utils": "^1.14.11",
+    "@saberhq/use-solana": "^1.14.11",
     "@solana/web3.js": "^1.73.3",
     "@switchboard-xyz/switchboard-v2": "^0.0.174",
     "@types/node-cron": "^3.0.7",
