--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "API for the Honey Finance protocol",
   "main": "index.js",
   "scripts": {
-    "dev": "set NODE_ENV=dev && ts-node-dev --respawn src/index.ts --watch",
+    "dev": "cross-env NODE_ENV=dev ts-node-dev --respawn src/index.ts --watch",
     "devRun": "set NODE_ENV=dev && ts-node src/index.ts --watch",
     "build": "tsc",
     "test": "jest --watch"
@@ -59,6 +59,7 @@
     "bn.js": "^5.2.1",
     "concurrently": "^7.6.0",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "express": "^4.18.2",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^6.7.0",
